added logging for services